--- a/views/genre_delete.pug
+++ b/views/genre_delete.pug
@@ -21,9 +21,9 @@ block content
 
     form(method="POST", action="")
       .mb-3
-        input#authorid.form-control(
+        input#genreid.form-control(
           type="hidden",
-          name="authorid",
+          name="genreid",
           required="true",
           value=genre._id
         )
